--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,6 @@
 @import 'tailwindcss';
+
+@font-face {
+  font-family: 'Excalifont';
+  src: url('/fonts/Excalifont-Regular.woff2') format('woff2'),
+}
